--- a/src/pages/faq/faq.css
+++ b/src/pages/faq/faq.css
@@ -54,5 +54,11 @@
 }
 
 .faq_tabs {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
+}
+
+@media only screen and (max-width: 700px) {
+  .faq_page {
+    padding-right: 0 !important;
+  }
 }
