--- a/src/pages/plinko/plinko.css
+++ b/src/pages/plinko/plinko.css
@@ -62,3 +62,27 @@
     ),
     #141622 !important;
 }
+
+@media only screen and (max-width: 700px) {
+  .plinko_tree {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 30px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+  }
+  .plinko_tree svg {
+    width: 90%;
+    margin: 0 auto;
+    height: auto;
+  }
+  .plinko_page .tower_game_block {
+    width: 100%;
+    margin-top: 12px;
+  }
+  .plinko_page .tower_wrapper {
+    background: transparent !important;
+  }
+}
