--- a/src/pages/tower/tower.css
+++ b/src/pages/tower/tower.css
@@ -18,7 +18,6 @@
   border-bottom-right-radius: 20px;
 }
 
-
 .tower_card {
   width: 150px;
   height: 62px;
@@ -173,4 +172,60 @@
 
 .pages_live_fee .header_table_content {
   margin-bottom: 0;
+}
+
+@media only screen and (max-width: 700px) {
+  .tower_wrapper {
+    border-radius: 0;
+  }
+  .pages_live_fee {
+    padding: 12px;
+    border-radius: 0;
+    margin-top: 0;
+    background: transparent;
+  }
+  .tower_game_block {
+    width: 100%;
+    margin-left: 4px;
+  }
+  .tower_top_blocks .tower_card {
+    width: 90px;
+    height: 45px;
+    box-shadow: none;
+    box-shadow: 0px 3px 0px 0px #0047b0;
+  }
+  .card_bg_blur {
+    display: none;
+  }
+  .tower_top_blocks {
+    width: 100%;
+    padding-left: 45px;
+    padding-right: 45px;
+  }
+  .tower_page {
+    padding-top: 0 !important;
+    padding-bottom: 60px;
+  }
+  .tower_currency {
+    width: 189px;
+  }
+  .t_curr_start {
+    padding: 0 12px 0 12px;
+  }
+  .tower_game_block .sign_submit_btn {
+    width: 125px;
+  }
+  .tower_page .tower_input_increments .input_increment:nth-child(3),
+  .tower_page .tower_input_increments .input_increment:nth-child(4),
+  .tower_page .tower_input_increments .input_increment:nth-child(5) {
+    display: none;
+  }
+  .tower_input_increments .input_increment {
+    width: 75px;
+  }
+
+  .tower_wrapper .home_page_table_tabs {
+    margin-left: 12px;
+    margin-right: 12px;
+  }
 }
