after test fixes

--- a/src/components/nav-bar/navbar.css
+++ b/src/components/nav-bar/navbar.css
@@ -54,6 +54,7 @@ nav {
 .nav_slots_live {
   display: flex;
   align-items: center;
+   margin-left: 38px;
 }
 .nav_slots_live div {
   display: flex;
