--- a/src/pages/home-page/home-page.css
+++ b/src/pages/home-page/home-page.css
@@ -76,7 +76,7 @@
     justify-content: space-between;
   }
   .header_mobile_cards div {
-    width: 160px;
+    width: 47%;
 
     margin-bottom: 15px;
   }
