--- a/src/pages/coinflip/coinflip.css
+++ b/src/pages/coinflip/coinflip.css
@@ -229,6 +229,17 @@
   display: none;
 }
 
+@media only screen and (max-width: 1140px) {
+   .coinflip_list_item {
+    /* display: grid;
+    grid-template-columns: repeat(2, 1fr); */
+    flex-wrap: wrap;
+   }
+   .coinflip_page  {
+    padding-left: 20px;
+   }
+}
+
 @media only screen and (max-width: 700px) {
   .custom_page_top {
     flex-direction: column;
