--- a/src/components/profile-table/profile-table.css
+++ b/src/components/profile-table/profile-table.css
@@ -1,6 +1,10 @@
 .history_mobile_table {
   display: none;
 }
+.border_radius_table {
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
+}
 @media only screen and (max-width: 700px) {
   .history_mobile_table {
   display: block;
