--- a/src/pages/crash/crash.css
+++ b/src/pages/crash/crash.css
@@ -44,6 +44,12 @@
   background: transparent;
   cursor: pointer;
 }
+.crash_tabs button:first-child {
+  margin-right: 10px;
+}
+.crash_tabs button:last-child {
+  margin-left: 10px;
+}
 .active_crash_tab {
   background: #212430 !important;
   color: #fff !important;
@@ -265,7 +271,7 @@
   overflow: hidden;
   margin-left: 18px;
   position: relative;
-  height: auto;
+  height: 820px;
 }
 .right_coefficient_blocks {
   width: 100%;
@@ -350,16 +356,236 @@
   width: 50%;
   text-align: center;
 }
+.right_roblox {
+  position: relative;
+  padding-left: 30px;
+  width: 50%;
+}
+.left_roblox img {
+  margin-top: 40px;
+  margin-bottom: 20px;
+  position: relative;
+  z-index: 111;
+}
+.left_roblox .white {
+  color: #fff !important;
+  margin-bottom: 5px !important;
+}
 .left_robox_bg {
   position: absolute;
-  left: 0;
+  /* left: -12px; */
+  width: 100%;
+}
+.right_roblox .nav_wallet_currency p {
+  font-size: 22px;
+}
+.right_roblox .green_winning {
+  margin-top: 23px;
+}
+.green_winning .nav_wallet_currency p {
+  color: var(--tint-green, #65dc80);
+  text-shadow: 0px 0px 20px 0px rgba(101, 220, 128, 0.37);
+  font-family: HalvarBreitschrift;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.green_winning .nav_wallet_currency svg * {
+  fill: #65dc80;
+}
+
+.crash_limited_cashout {
+  margin-top: 25px;
+  margin-bottom: 20px;
+}
+.crash_limited_cashout .main_p_style {
+  font-size: 14px;
+}
+
+.crash_limited_cashout .cashout_score {
+  width: 106px;
+  background: #0f111d;
+}
+.crash_limited_balance {
+  width: 100%;
+  padding: 10px;
+  border-radius: 16px;
+  background: #1b1d29;
+}
+.crash_limited_balance_top {
+  padding: 7px 12px;
+  background: #141622;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.crash_limited_balance_top .main_p_style {
+  color: var(--foreground-dark, #51535f);
+  margin-bottom: 6px;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 18px; /* 180% */
+}
+.ml_45px {
+  margin-left: 45px;
+}
+.df {
+  display: flex;
+}
+.select_all button {
+  width: 15px;
+  height: 15px;
+  padding: 3px;
+  cursor: pointer;
+
+  background: #1b1d29;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+}
+.select_all {
+  display: flex;
+  align-items: center;
+}
+.select_all p {
+  margin-left: 10px;
+  color: var(--foreground-white, #fff);
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.crash_limited_balance .modal_small_cards_template {
+  width: 100%;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 10px;
+  grid-gap: 10px;
+}
+.crash_limited_balance .modal_small_cards_template .modal_card_item {
+  margin: 0;
+}
+.crash_limited_balance .modal_small_cards_template .temp_text {
+  margin: 12px 0;
+}
+.crash_limited_balance .modal_small_cards_template .temp_text p {
+  color: var(--foreground-text-message, #70717e);
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.limited_right_crash {
+  width: 100%;
+  padding-left: 20px;
+}
+.limited_right_crash .right_crash_column {
+  width: 100%;
+  height: 520px;
+  margin-left: 0;
+}
+.limited_right_crash .right_crash_center {
+  margin-top: 80px;
+}
+.limited_right_crash .right_crash_center p {
+  color: var(--foreground-white, #fff);
+  text-align: center;
+  font-family: HalvarBreitschrift;
+  font-size: 58px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 70px;
+  position: relative;
+  z-index: 11;
+}
+
+.round_statistics {
+  margin-top: 20px;
+  width: 100%;
+}
+
+.round_statistics_top {
+  width: 100%;
+  padding: 8px 27px 10px 19px;
+  border-radius: 12px;
+  background: var(--background-stats, #212430);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.round_title {
+  color: var(--foreground-white, #fff);
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 18px;
+}
+.df_aic {
+  display: flex;
+  align-items: center;
+}
+.round_statistics_top .white {
+  margin-top: 5px !important;
+}
+.round_statistics_top .df_aic svg {
+  margin-right: 10px;
+}
+.vertical_line {
+  width: 1px;
+  height: 20px;
+  background: #272935;
+  margin: 0 27px;
+}
+.round_statistics_item {
+  border-radius: 12px;
+  padding: 12px 10px;
+  margin: 10px 0;
+  background: var(--background-bg-dark, #141622);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.left_rounded_items img {
+  width: 50px;
+}
+.left_rounded_items img:first-child {
+  margin-right: 20px;
+}
+.in_game_btn button {
+  border-radius: 8px;
+  background: rgba(32, 161, 236, 0.05);
+  padding: 10px 14px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: var(--tint-blue, #20a1ec);
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 18px; /* 150% */
+}
+.right_rounded_items {
+ display: flex;
+ align-items: center;
+}
+.right_rounded_items
+.nav_wallet_currency  {
+  margin: 0;
+  margin-right: 18px;
 }
 @media only screen and (max-width: 1270px) {
   .crash_wrapper {
     flex-direction: column-reverse;
-  
   }
-  .crash_page, .home_page   {
+  .crash_page,
+  .home_page {
     padding-left: 20px;
   }
   .right_crash_column {
@@ -374,7 +600,6 @@
   .padding_0 {
     padding-right: 0 !important;
   }
-
 }
 @media only screen and (max-width: 960px) {
   .right_crash_column {
@@ -386,6 +611,9 @@
 @media only screen and (max-width: 700px) {
   .crash_wrapper {
     flex-direction: column-reverse;
+  }
+  .select_all {
+    display: none;
   }
   .right_crash_column {
     margin: 0;
@@ -468,5 +696,31 @@
     margin-left: 20px;
     margin-right: 20px;
   }
-
+  .crash_limited_balance .modal_small_cards_template .modal_card_item {
+    margin: 0;
+    width: 155px;
+  }
+  .crash_limited_balance .modal_small_cards_template {
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 10px;
+    grid-gap: 10px;
+  }
+  .round_statistics {
+    display: none;
+  }
+  .limited_right_crash {
+    padding-left: 0;
+  }
+  .limited_right_crash .right_crash_column {
+    width: 100%;
+    height: 330px;
+    margin-left: 0;
+}
+.limited_right_crash .right_crash_column
+.crash_right_bg {
+ width: 100%;
+ height: 100%;
+ top: 0;
+}
 }
