--- a/src/pages/coinflip/coinflip.css
+++ b/src/pages/coinflip/coinflip.css
@@ -239,6 +239,9 @@
     padding-left: 20px;
    }
 }
+.coinflip_modal_block .vetical_gray_line  {
+  margin: 0;
+}
 
 @media only screen and (max-width: 700px) {
   .custom_page_top {
